--- a/web/v1/style.css
+++ b/web/v1/style.css
@@ -1,6 +1,6 @@
 body
 {
-  font-size: 11pt;
+  font-size: 10pt;
   background-color: #fff;
 }
 
@@ -57,7 +57,7 @@ textarea
   display: block;
   margin: 4px 0px;;
   border: 1px lightgray solid;
-  width: 1057px;
+  width: 99.5%;
 }
 
 #time_field
@@ -73,8 +73,8 @@ textarea
   display: inline-block;
   border: 1px lightgray solid;
   margin: 0px;
-  height: 520px;
-  width: 250px;
+  height: 700px;
+  width: 25%;
   vertical-align: top;
   /*float: left;*/
 }
@@ -85,8 +85,8 @@ textarea
   display: inline-block;
   border: 1px lightgray solid;
   margin: 0px;
-  height: 520px;
-  width: 800px;
+  height: 700px;
+  width: 74%;
   vertical-align: top;
   /*float: right;*/
 }
